1/11/12 subclass SimSharingPiccoloModule and add userComponents for tabs
1/3/12 #3202, sim-sharing changes related to Swing controls
12/2/11 move sim-sharing string literals to BCESimSharing
#3136, use sim-sharing string constants in balancing-chemical-equations
# 1.00.08 (58369) Nov 5, 2011
11/5/11 deployed by SR for something having to do with shimsharing #3136
# 1.00.07 (58346) Nov 3, 2011
11/3/11 deployed by SR for something having to do with shimsharing #3136
# 1.00.06 (58329) Nov 3, 2011
11/3/11 deployed by SR for something having to do with shimsharing #3136
# 1.00.05 (58276) Nov 2, 2011
11/2/11 deployed by SR for something having to do with shimsharing #3136
# 1.00.04 (58219) Nov 1, 2011
11/1/11 deployed by SR for something having to do with shimsharing #3136
# 1.00.03 (58183) Oct 31, 2011
10/31/11 Updated message formatting, see shimsharing #3136
# 1.00.02 (58148) Oct 30, 2011
10/30/11 Only try to load machine cookie if sim-sharing is enabled, see #3136
# 1.00.01 (58146) Oct 30, 2011
10/30/11 Report events when game state changes, see #3136
10/28/11 Report when radio button properties change, see #3136
10/28/11 Report values for equation coefficients and balancing, see #3136
10/28/11 Added event reporting for end of game, see #3136
4/26/11 move all developer code to a new developer package
4/26/11 add "Developer->Preview molecules" menu item (used to be a separate app for previewing molecule colors on choosable background color)
4/9/11 #2796, handled all REVIEW task tags that were added during code review, see ticket for changesets
# 1.00.00 (50396) Apr 6, 2011
4/6/11 delete TODO file, all tasks completed, post-1.00 tasks will be tracked via Unfuddle
4/6/11 create screenshot for sim page
4/6/11 delete test apps (test-molecules, test-game-reward) from build properties
4/6/11 check in a snapshot of the design doc
4/6/11 change request: set play area color to tan (RGB=214,201,182), confirmed that this color has no colorblind issues