@@ -8,15 +8,15 @@ import java.util.ArrayList;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
-import edu.colorado.phet.balancingchemicalequations.BCESimSharing;
 import edu.colorado.phet.balancingchemicalequations.model.Equation;
 import edu.colorado.phet.balancingchemicalequations.model.EquationTerm;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
-import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.ComponentTypes;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.ParameterKeys;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.UserActions;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentId;
 import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponents;
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
 import edu.colorado.phet.common.phetcommon.util.PhetUtilities;
@@ -29,6 +29,7 @@ import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PText;
 import edu.umd.cs.piccolox.pswing.PSwing;
 
+import static edu.colorado.phet.common.phetcommon.simsharing.Parameter.componentType;
 import static edu.colorado.phet.common.phetcommon.simsharing.messages.ComponentChain.chain;
 
 /**
@@ -195,7 +196,7 @@ public class EquationNode extends PhetPNode {
         public TermNode( IntegerRange coefficientRange, final EquationTerm term, boolean editable ) {
 
             // coefficient
-            coefficientNode = new CoefficientNode( new BCESimSharing.CoefficientNodeSpinner( term.getMolecule().getSymbol() ), coefficientRange, term.getUserCoefficientProperty(), editable );
+            coefficientNode = new CoefficientNode( new UserComponentId( term.getMolecule().getSymbol() ), coefficientRange, term.getUserCoefficientProperty(), editable );
             addChild( coefficientNode );
 
             // molecule symbol
@@ -243,7 +244,7 @@ public class EquationNode extends PhetPNode {
             spinner.addChangeListener( new ChangeListener() {
                 public void stateChanged( ChangeEvent e ) {
                     SimSharingManager.sendUserMessage( chain( userComponent, UserComponents.spinner ), UserActions.changed,
-                                                       Parameter.param( ParameterKeys.value, spinner.getIntValue() ) );
+                                                       componentType( ComponentTypes.spinner ).param( ParameterKeys.value, spinner.getIntValue() ) );
 
                     coefficientProperty.set( spinner.getIntValue() );
                 }
